# oxytone

./: .gitignore  .gitmodules  Justfile  pyproject.toml  vite.config.ts
repo/: normalize.xqm
seed/: lsj.xq  normalize.xq
webapp/: read.xqm
