[project]
name = "paroxytone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "genanki>=0.13.1",
    "httpx>=0.28.1",
    "regex>=2024.11.6",
    "starlette>=0.51.2",
    "annotated-doc>=0.0.4",
    "anyio>=4.12.1",
    "pydantic>=1.10.20",
    "pydantic_core>=2.46.2"
]
