[project]
name = "paroxytone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "genanki>=0.13.1",
    "httpx>=0.28.1",
    "regex>=2024.11.6",
    "starlette>=0.51.2",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "typing-extensions>=4.1.5",
    "typing-inspection>=0.4.2",
    "cached-property>=1.5.2",
    "chevron>=0.14.0",
    "pyyaml>=6.0.3",
    "idna>=3.1.1",
    "httpcore>=1.0.9",
    "certifi>=2026.1.4",
    "h11>=0.16.0"
]
